<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        tools:context=".ui.MainActivity">

    <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:elevation="25dp"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/button_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/white"
            android:fontFamily="@font/rubik"
            android:elevation="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/menu"
            app:layout_constraintStart_toEndOf="@+id/menu"
            app:layout_constraintTop_toTopOf="@+id/menu"/>

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="347dp"
            android:layout_height="48dp"
            android:text="@string/space_picture"
            android:textSize="32sp"
            android:textColor="@android:color/white"
            android:textAlignment="textEnd"
            android:fontFamily="@font/rubik"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>

    <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            tools:context=".ui.MainActivityKt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </FrameLayout>

    <include layout="@layout/middle_sheet"/>

</androidx.constraintlayout.widget.ConstraintLayout>